# electro_horse

./: CMakeLists.txt  EletroHorseApp  README.md  build.sh  tags
eletro-app/: CMakeLists.txt  build.sh
eletro-app/repo/Application/: Application.cpp  Application.h  ProgramProcess.cpp  ProgramProcess.h
eletro-app/repo/Command/: CommandHandler.cpp  CommandHandler.h  ICommand.h
eletro-board/: .gitignore  CMakeLists.txt  TestApplication  build.sh
eletro-board/repo/: CMakeLists.txt
eletro-board/repo/Board/: Board.cpp  Board.h
eletro-board/repo/DeviceControl/: DeviceControl.cpp  DeviceControl.h
eletro-board/repo/Hardware/Device/: DeviceDefinition.h  IDevices.h
eletro-board/repo/Hardware/Device/HBridge/: HBridgeDefinitions.h
eletro-board/repo/Hardware/Device/HBridge/I2C/: HBridge.cpp  HBridge.h
eletro-board/repo/Hardware/Device/HBridge/IO/: HBridge.cpp  HBridge.h
eletro-board/repo/Hardware/Device/Motor/: Motor.cpp  Motor.h
eletro-board/repo/Hardware/Device/Reles/: Rele.cpp  Rele.h
eletro-board/repo/Hardware/Device/Sensor/: DS1803.cpp  DS1803.h  MAX6675.cpp  MAX6675.h
eletro-board/repo/Hardware/Device/Timer/: Timer.cpp  Timer.h
eletro-board/repo/Hardware/Interface/IO/: GPIO.h  IODefinition.h
eletro-board/repo/Hardware/Interface/PWM/: Pwm.cpp  Pwm.h  PwmDefinition.h
eletro-board/repo/Hardware/Interface/SerialBus/1Wire/: OneWire.cpp  OneWire.h
eletro-board/repo/Hardware/Interface/SerialBus/I2C/: I2C.cpp  I2C.h
eletro-board/repo/Hardware/Interface/SerialBus/SPI/: Spi.cpp  Spi.h
eletro-board/repo/Hardware/System/: ISysPath.h  SysPathDefinition.h
eletro-board/repo/Test/: CMakeLists.txt  Main.cpp
eletro-display/: CMakeLists.txt
eletro-display/repo/c/src/Comm/: TcpIpComm.cpp  TcpIpComm.h  TcpIpDefinitions.h
eletro-display/repo/c/src/Display/: Display.cpp  Display.h
eletro-display/repo/python/gui/: BorderConnection.py  Configuration.py  DataBase.py  ImagePath.py  MainScreen.py  Movie.py  PackageId.py  RunEnd.py  RunInt.py
eletro-display/repo/python/gui/database/: config.csv
eletro-display/repo/python/gui/image/: sn_adm_s10_tsn.sh
eletro-display/repo/python/src/connection/: board.py  client.py
eletro-util/: CMakeLists.txt  error.h
eletro-util/repo/Common/: CommandDefinition.h  Common.h
eletro-util/repo/Error/: Error.h
eletro-util/repo/HandlePackage/: HandlePackage.cpp  HandlePackage.h
eletro-util/repo/Log/: Log.h
eletro-util/repo/Message/: Message.h
eletro-util/repo/Package/: Package.h
eletro-util/repo/Queue/: Queue.h
eletro-util/repo/SignalCommand/: Command.h  HandleCommand.h  Signal.cpp  Signal.h  SignalCommand.h
eletro-util/repo/StructData/: StructData.h
eletro-util/repo/Thread/: ThreadManager.cpp  ThreadManager.h
env_09052021_001/env/: Application  configure.sh
env_09052021_001/env/display/: BorderConnection.py  ImagePath.py  MainScreen.py  MouseListener.py  Movie.py  Preparation.py  PreparationInt.py  Run.py  Settings.py
script/: config.txt  configure-menu.sh  rasp-prepare.sh
script/systemd/: board.service  display.desktop  display.service
